--- a/SmogWawelski/SmogWawelski/MainWindow.xaml
+++ b/SmogWawelski/SmogWawelski/MainWindow.xaml
@@ -5,9 +5,85 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SmogWawelski"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
-    
+        Title="MainWindow" Height="400" Width="600">
+
     <Grid>
-        
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="433*"/>
+            <ColumnDefinition Width="161*"/>
+        </Grid.ColumnDefinitions>
+        <Grid.Background>
+            <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                <GradientStop Color="Black" Offset="0"/>
+                <GradientStop Color="White" Offset="1"/>
+                <GradientStop Color="#FF9A9A9A" Offset="0.01"/>
+            </LinearGradientBrush>
+        </Grid.Background>
+
+        <Menu x:Name="menu" HorizontalAlignment="Left" Height="19" VerticalAlignment="Top" Width="590" Grid.ColumnSpan="2">
+            <MenuItem Header="Opcje">
+                <MenuItem Header="Ustawienia"/>
+                <MenuItem Header="Powiadomienia"/>
+            </MenuItem>
+            <MenuItem Header="Odśwież"/>
+            <MenuItem Header="O nas"/>
+        </Menu>
+        <Rectangle HorizontalAlignment="Left" Height="46" Margin="322,60,0,0" Stroke="#FF000A79" VerticalAlignment="Top" Width="226" RadiusX="11" RadiusY="9" StrokeThickness="5" Grid.ColumnSpan="2">
+            <Rectangle.Fill>
+                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                    <GradientStop Color="#FF66EBD6" Offset="0"/>
+                    <GradientStop Color="#FF4444D4" Offset="1"/>
+                </LinearGradientBrush>
+            </Rectangle.Fill>
+        </Rectangle>
+        <Rectangle HorizontalAlignment="Left" Height="46" Margin="322,130,0,0" Stroke="#FF000A79" VerticalAlignment="Top" Width="226" RadiusX="11" RadiusY="9" StrokeThickness="5" Grid.ColumnSpan="2">
+            <Rectangle.Fill>
+                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                    <GradientStop Color="#FF66EBD6" Offset="0"/>
+                    <GradientStop Color="#FF4444D4" Offset="1"/>
+                </LinearGradientBrush>
+            </Rectangle.Fill>
+        </Rectangle>
+        <Rectangle HorizontalAlignment="Left" Height="46" Margin="322,200,0,0" Stroke="#FF000A79" VerticalAlignment="Top" Width="226" RadiusX="11" RadiusY="9" StrokeThickness="5" Grid.ColumnSpan="2">
+            <Rectangle.Fill>
+                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                    <GradientStop Color="#FF66EBD6" Offset="0"/>
+                    <GradientStop Color="#FF4444D4" Offset="1"/>
+                </LinearGradientBrush>
+            </Rectangle.Fill>
+        </Rectangle>
+        <Rectangle HorizontalAlignment="Left" Height="46" Margin="322,270,0,0" Stroke="#FF000A79" VerticalAlignment="Top" Width="226" RadiusX="11" RadiusY="9" StrokeThickness="5" Grid.ColumnSpan="2">
+            <Rectangle.Fill>
+                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                    <GradientStop Color="#FF66EBD6" Offset="0"/>
+                    <GradientStop Color="#FF4444D4" Offset="1"/>
+                </LinearGradientBrush>
+            </Rectangle.Fill>
+        </Rectangle>
+        <TextBlock x:Name="textBlock" HorizontalAlignment="Left" Margin="322,74,0,0" TextWrapping="Wrap" Text="500" VerticalAlignment="Top" Width="221" Height="18" Cursor="No" Foreground="#FFE02727" FontWeight="Bold" TextAlignment="Center" FontFamily="Lucida Calligraphy" FontSize="14.667" Grid.ColumnSpan="2"/>
+        <TextBlock x:Name="textBlock_Copy" HorizontalAlignment="Left" Margin="322,144,0,0" TextWrapping="Wrap" Text="500" VerticalAlignment="Top" Width="221" Height="18" Cursor="No" Foreground="#FFE02727" FontWeight="Bold" TextAlignment="Center" FontFamily="Lucida Calligraphy" FontSize="14.667" Grid.ColumnSpan="2"/>
+        <TextBlock x:Name="textBlock_Copy1" HorizontalAlignment="Left" Margin="322,214,0,0" TextWrapping="Wrap" Text="500" VerticalAlignment="Top" Width="221" Height="18" Cursor="No" Foreground="#FFE02727" FontWeight="Bold" TextAlignment="Center" FontFamily="Lucida Calligraphy" FontSize="14.667" Grid.ColumnSpan="2"/>
+        <TextBlock x:Name="textBlock_Copy2" HorizontalAlignment="Left" Margin="322,284,0,0" TextWrapping="Wrap" Text="500" VerticalAlignment="Top" Width="221" Height="18" Cursor="No" Foreground="#FFE02727" FontWeight="Bold" TextAlignment="Center" FontFamily="Lucida Calligraphy" FontSize="14.667" Grid.ColumnSpan="2"/>
+        <Ellipse HorizontalAlignment="Left" Height="142" Margin="65,74,0,0" StrokeThickness="10.3" VerticalAlignment="Top" Width="142">
+            <Ellipse.Stroke>
+                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                    <GradientStop Color="#FFF40D0D" Offset="0"/>
+                    <GradientStop Color="#FF00DC2A" Offset="1"/>
+                </LinearGradientBrush>
+            </Ellipse.Stroke>
+            <Ellipse.Fill>
+                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                    <GradientStop Color="#FF930000" Offset="0"/>
+                    <GradientStop Color="#FF0F461F" Offset="0.833"/>
+                </LinearGradientBrush>
+            </Ellipse.Fill>
+        </Ellipse>
+        <TextBlock x:Name="textBlock1" HorizontalAlignment="Left" Margin="96,130,0,0" TextWrapping="Wrap" Text="144%" VerticalAlignment="Top" Height="30" Width="80" TextAlignment="Center" FontSize="21.333" FontWeight="Bold" FontFamily="Open Sans" Foreground="#FF82C200"/>
+        <TextBlock x:Name="textBlock2" HorizontalAlignment="Left" Margin="59,49,0,0" TextWrapping="Wrap" Text="Normy przekroczone o:" VerticalAlignment="Top" Width="158" Height="20" FontFamily="Sitka Text" Foreground="#FFA90736" FontSize="13.333" FontWeight="Bold" TextAlignment="Center"/>
+        <TextBlock x:Name="textBlock2_Copy" HorizontalAlignment="Left" Margin="354,40,0,0" TextWrapping="Wrap" Text="U10:" VerticalAlignment="Top" Width="158" Height="20" FontFamily="Sitka Text" Foreground="#FFA90736" FontSize="13.333" FontWeight="Bold" Grid.ColumnSpan="2" TextAlignment="Center"/>
+        <TextBlock x:Name="textBlock2_Copy1" HorizontalAlignment="Left" Margin="354,110,0,0" TextWrapping="Wrap" Text="U20:" VerticalAlignment="Top" Width="158" Height="20" FontFamily="Sitka Text" Foreground="#FFA90736" FontSize="13.333" FontWeight="Bold" Grid.ColumnSpan="2" TextAlignment="Center"/>
+        <TextBlock x:Name="textBlock2_Copy2" HorizontalAlignment="Left" Margin="354,180,0,0" TextWrapping="Wrap" Text="U25:" VerticalAlignment="Top" Width="158" Height="20" FontFamily="Sitka Text" Foreground="#FFA90736" FontSize="13.333" FontWeight="Bold" Grid.ColumnSpan="2" TextAlignment="Center"/>
+        <TextBlock x:Name="textBlock2_Copy3" HorizontalAlignment="Left" Margin="354,250,0,0" TextWrapping="Wrap" Text="U50:" VerticalAlignment="Top" Width="158" Height="20" FontFamily="Sitka Text" Foreground="#FFA90736" FontSize="13.333" FontWeight="Bold" Grid.ColumnSpan="2" TextAlignment="Center"/>
+
     </Grid>
 </Window>
