--- a/SmogWawelski/SmogWawelski/Forms/MainWindow.xaml
+++ b/SmogWawelski/SmogWawelski/Forms/MainWindow.xaml
@@ -19,11 +19,11 @@
 
         <Menu x:Name="menu" Height="19" Grid.ColumnSpan="2" VerticalAlignment="Top" Margin="0,0,-0.4,0">
             <MenuItem Header="Opcje">
-                <MenuItem Header="Ustawienia"/>
-                <MenuItem Header="Powiadomienia"/>
+                <MenuItem Header="Ustawienia" Click="Settings"/>
+                <MenuItem Header="Powiadomienia" Click="Notifications"/>
             </MenuItem>
-            <MenuItem Header="Odśwież"/>
-            <MenuItem Header="O nas"/>
+            <MenuItem Header="Odśwież" Click="Refresh"/>
+            <MenuItem Header="O nas" Click="AboutUs"/>
         </Menu>
         <Rectangle HorizontalAlignment="Left" Height="46" Margin="322,60,0,0" Stroke="#FF000A79" VerticalAlignment="Top" Width="226" RadiusX="11" RadiusY="9" StrokeThickness="5" Grid.ColumnSpan="2">
             <Rectangle.Fill>
@@ -75,7 +75,7 @@
                 </LinearGradientBrush>
             </Ellipse.Fill>
         </Ellipse>
-        <TextBlock x:Name="textBlock1" HorizontalAlignment="Left" Margin="96,130,0,0" TextWrapping="Wrap" Text="144%" VerticalAlignment="Top" Height="30" Width="80" TextAlignment="Center" FontSize="21.333" FontWeight="Bold" FontFamily="Open Sans" Foreground="#FF82C200"/>
+        <TextBlock x:Name="textBlock1" HorizontalAlignment="Left" Margin="96,130,0,0" TextWrapping="Wrap" Text="90%" VerticalAlignment="Top" Height="30" Width="80" TextAlignment="Center" FontSize="21.333" FontWeight="Bold" FontFamily="Open Sans" Foreground="#FF82C200"/>
         <TextBlock x:Name="textBlock2" HorizontalAlignment="Left" Margin="59,49,0,0" TextWrapping="Wrap" Text="Normy przekroczone o:" VerticalAlignment="Top" Width="158" Height="20" FontFamily="Sitka Text" Foreground="#FFA90736" FontSize="13.333" FontWeight="Bold" TextAlignment="Center"/>
         <TextBlock x:Name="textBlock2_Copy" HorizontalAlignment="Left" Margin="354,40,0,0" TextWrapping="Wrap" Text="U10:" VerticalAlignment="Top" Width="158" Height="20" FontFamily="Sitka Text" Foreground="#FFA90736" FontSize="13.333" FontWeight="Bold" Grid.ColumnSpan="2" TextAlignment="Center"/>
         <TextBlock x:Name="textBlock2_Copy1" HorizontalAlignment="Left" Margin="354,110,0,0" TextWrapping="Wrap" Text="U20:" VerticalAlignment="Top" Width="158" Height="20" FontFamily="Sitka Text" Foreground="#FFA90736" FontSize="13.333" FontWeight="Bold" Grid.ColumnSpan="2" TextAlignment="Center"/>
