--- a/SmogWawelski/SmogWawelski/Forms/MainWindow.xaml
+++ b/SmogWawelski/SmogWawelski/Forms/MainWindow.xaml
@@ -1,4 +1,5 @@
 ﻿<Window x:Class="SmogWawelski.MainWindow"
+        Icon="/SmogWawelski;component/Images/icon.png"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -16,7 +17,8 @@
         <Menu x:Name="menu" Height="19" Grid.ColumnSpan="2" VerticalAlignment="Top" Margin="0,0,-0.4,0">
             <MenuItem Header="Opcje">
                 <MenuItem Header="Ustawienia" Click="Settings"/>
-                <MenuItem Header="Powiadomienia" Click="Notifications"/>
+                <MenuItem IsCheckable="True" Header="Powiadomienia" Checked="Notifications_checked"
+                                                                    Unchecked="Notifications_unchecked"/>
             </MenuItem>
             <MenuItem Header="Odśwież" Click="Refresh"/>
             <MenuItem Header="O nas" Click="AboutUs"/>
