--- a/SmogWawelski/SmogWawelski/Forms/AboutUs.xaml
+++ b/SmogWawelski/SmogWawelski/Forms/AboutUs.xaml
@@ -10,6 +10,13 @@
         <ImageBrush ImageSource="/SmogWawelski;component/Images/wawel.png"/>
     </Window.Background>
     <Grid>
-        
+        <TextBlock x:Name="textBlock" HorizontalAlignment="Left" Height="213" Margin="192,68,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="232">
+            <Bold Foreground="#FFA90000" Block.TextAlignment="Justify" FontWeight="Bold" FontSize="24">
+                 Autorzy:<LineBreak/>
+                 -Paweł Muszyński<LineBreak/>
+                 -Krystian Kalinka
+                
+            </Bold>
+        </TextBlock>
     </Grid>
 </Window>
